# MotorLib-For-Linux

./: .gitmodules  CMakeLists.txt  README.md
cmake/: motorLib-config.cmake.in  motor_lib-config.cmake.in
example/: dji_board_example.cpp  vesc_board_example.cpp
inc/: dji_board.h  vesc_board.h
include/motorLib/: dji_board.h  odrive.h  vesc_board.h
include/motor_lib/: dji_board.h  vesc_board.h
src/: dji_board.cpp  vesc_board.cpp
